# authn-api

./: .env  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
.github/workflows/: ci.yaml  ci.yml
src/: common.rs  controller.rs  dto.rs  lib.rs  main.rs  plugins.rs  rpc.rs  service.rs
src/common/: cache.rs  client.rs  config.rs  constant.rs  errors.rs  jwt.rs  middleware.rs  nacos.rs  oauth.rs  response.rs  utils.rs
src/common/cache/: moka.rs  redis.rs
src/common/oauth/: github.rs  google.rs
src/common/srp/: server.rs
src/controller/: auth_controller.rs  authenticate_controller.rs  authentication_controller.rs  authorize_controller.rs  challenge_controller.rs  idp_controller.rs
src/dto/: auth.rs  authenticate.rs  authorize.rs  challenge.rs  client.rs  password.rs  sms.rs  srp.rs  token.rs  user.rs
src/plugins/: client.rs  github.rs  oauth.rs
src/rpc/: client_rpc.rs  password_rpc.rs  user_rpc.rs
src/service/: auth_service.rs  challenge_service.rs  connection.rs  idp.rs  sms_service.rs  token_service.rs  user_service.rs
src/service/connection/: github.rs  google.rs  user.rs
src/service/idp/: github.rs  google.rs  tencent.rs  wechat.rs
tests/: flow_test.rs  jwt_test.rs  sms_test.rs  srp_test.rs
