[package]
name = "forum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive", "std"] }
oauth2 = { version = "4.4.1", default-features = false }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
http = "0.2.9"
lazy_static = "1.4.0"
ring = "0.16.20"
toml = "0.7.6"
env_logger = "0.10.0"
derive_builder = "0.12.0"
redis = { version = "0.23.1", features = ["json", "aio", "tokio-comp"] }
async-trait = "0.1.72"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7.6"
tracing-appender = "0.2"

chrono = "0.4.26"
lettre = { version = "0.10", features = [
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "serde",
  "smtp-transport",
], default-features = false }
tera = { version = "1.19.0", default-features = false }
nacos-sdk = { version = "0.3", features = ["async"] }
dotenvy = "0.15.7"
anyhow = "1.0"
validator = { version = "0.16.1", features = ["derive"] }
futures-util = { version = "0.3.28" }
actix-service = "2.0.2"
hex = "0.4.3"
num-bigint = { version = "0.4.4" }
rand = "0.8.5"
jsonwebtoken = "8.3.0"
base64 = "0.21.3"
openssl = "0.10.57"
openssl-sys = "0.9.92"
strum = { version = "0.25", features = ["derive"] }
