[package]
name = "forum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive", "std"] }
oauth2 = { version = "4.4.1", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
http = "0.2.9"
lazy_static = "1.4.0"
ring = "0.16.20"
toml = "0.7.6"
env_logger = "0.10.0"
derive_builder = "0.12.0"
